# reko

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/reko/: __main__.py  api.py  app.py  cli.py  errors.py
src/reko/adapters/: dspy.py  storage.py  youtube.py
src/reko/adapters/dspy/: config.py  modules.py  signatures.py
src/reko/core/: chunking.py  errors.py  markdown.py  models.py  modules.py  prompt.py  services.py  signatures.py  summarizer.py  text_utils.py  transcript.py  translation.py  youtube_client.py
src/reko/web/static/: app.js  style.css
src/reko/web/templates/: index.html
