[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reko-yt"
version = "0.1.1"
description = "A modern, local-first CLI tool to extract transcripts from YouTube and transform them into concise summaries and key points."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Riccardo Ruspoli", email = "riccardoruspoli@gmail.com" }
]
requires-python = ">=3.10,<3.14"
keywords = ["youtube", "summarization", "llm", "cli", "ollama", "transcript"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "dspy>=3.0.4",
    "fastapi>=0.128.0",
    "iso639-lang>=2.6.3",
    "jinja2>=3.1.6",
    "markdown>=3.10",
    "ollama>=0.6.1",
    "pytubefix>=10.3.6",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
    "youtube-transcript-api>=1.2.3",
]

[project.urls]
Homepage = "https://github.com/riccardoruspoli/reko"
Repository = "https://github.com/riccardoruspoli/reko"
Issues = "https://github.com/riccardoruspoli/reko/issues"

[project.optional-dependencies]
dev = [
  "ruff",
  "tox>=4",
  "build",
  "twine",
]

[project.scripts]
reko = "reko.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reko = ["web/templates/*.html", "web/static/*.js", "web/static/*.css"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
